# PNLA

./: CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake
doc/: Doxyfile
doc/html/: FD__linear__system_8cpp.html  FD__linear__system_8h.html  FD__linear__system_8h_source.html  annotated.html  classFD__Linear__System-members.html  classFD__Linear__System.html  classMyClass-members.html  classMyClass.html  classes.html  classpnla_1_1VectorRn-members.html  classpnla_1_1VectorRn.html  develop_8cpp.html  dir_2bfe34e2e9e629f338fca84246b5ece6.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bc210ed17bb6533b52d3949b9d6927ea.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_d0a0c9a9855e7ffec00f85786b8e83e4.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  formula.repository  functions.html  functions_func.html  globals.html  globals_func.html  index.html  matrix__parallel_8cpp.html  matrix__parallel_8h.html  matrix__parallel_8h_source.html  matrix__seq_8h_source.html  md_README.html  menudata.js  my__utilities_8h.html  my__utilities_8h_source.html  myclass_8h_source.html  namespacepnla.html  namespaces.html  pages.html  (+17 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  searchdata.js
doc/latex/: FD__linear__system_8cpp.tex  FD__linear__system_8h.tex  annotated.tex  classFD__Linear__System.tex  classMyClass.tex  classpnla_1_1VectorRn.tex  develop_8cpp.tex  files.tex  matrix__parallel_8cpp.tex  matrix__parallel_8h.tex  md_README.tex  my__utilities_8h.tex  namespacepnla.tex  namespaces.tex  pcg_8h.tex  refman.tex  structpnla_1_1parallelMatrix.tex  structpnla_1_1parallelVector.tex  structpnla_1_1sequentialMatrix.tex  structpnla_1_1sequentialVector.tex  test__matrix_8cpp.tex  test__pcg_8cpp.tex  test__vectors_8cpp.tex  vector__seq_8cpp.tex  vector__seq_8h.tex
example/: CMakeLists.txt  FD_linear_system.cpp  FD_linear_system.h  develop.cpp  my_utilities.cpp  my_utilities.h
include/: FD_linear_system.h  matrix_parallel.h  matrix_seq.h  pcg.h  vector_parallel.h  vector_seq.h
src/: matrix_parallel.cpp  matrix_seq.cpp  pcg.cpp  vector_parallel.cpp  vector_seq.cpp
tests/: CMakeLists.txt  test_matrix.cpp  test_pcg.cpp  test_vectors.cpp
